\name{NEWS} \title{News for Package \pkg{rebmix}}
\newcommand{\cpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
\section{Changes in version 2.12.0}{ 
\itemize{
\item Improved C++ functions regarding memory allocation and efficiency.
\item Method \code{plot} is improved.
\item Method \code{RCLRMIX} is debugged and improved.
\item Method \code{REBMIX} is debugged and improved.
\item Method \code{bins} is added.
\item Method \code{optbins} is added.
\item Fixed bugs in C++ and R code.
}
}
\section{Changes in version 2.11.0}{ 
\itemize{
\item Method \code{split} is improved.
\item Improved C++ functions \code{REBMIXKNN()}, \code{REBMIXKDE()} and \code{REBMIXH()}.
\item Method \code{RCLSMIX} is improved.
\item Method \code{plot} is improved.
\item Continuous parametric family \code{"Gumbel"} is added.  
\item EM algorithm is added to the C++ code for the improved estimation of the Gaussian mixture model parameters.
\item Class \code{EM.Control} is added for EM algorithm control parameters handling.
}
}
\section{Changes in version 2.10.3}{ 
\itemize{
\item Method \code{Zp} is replaced by \code{a.Zp} accessor method.
\item Method \code{coef} is replaced by \code{a.theta1.all} and \code{a.theta2.all} accessor methods.
\item Accessor methods are added for all slots.
\item Class \code{"RNGMIX.Theta"} is added.
\item Method \code{show} is added for \code{"RCLS.chunk"} class.
\item Minimum number of component \code{cmin} is added to \code{REBMIX} arguments.
\item Minimum number of component \code{cmin} slot is added to \code{"REBMIX"} class.
\item Improved C++ functions \code{REBMIXKNN()}, \code{REBMIXKDE()} and \code{REBMIXH()}.
\item Preprocessing \code{"Parzen window"} is renamed to \code{"kernel density estimation"}.
\item Rough parameter estimation for binomial and Poisson parametric families is improved.
\item Latent class analysis is added.
}
}
\section{Changes in version 2.10.2}{ 
\itemize{
\item Method \code{split} is improved.