@@ -44,7 +44,7 @@ function(x,
   n <- nrow(Dataset)
 
   if (n < 1) {
-    stop(sQuote("Dataset"), " number of rows in data frame must be greater than 1!", call. = FALSE)
+    stop(sQuote("Dataset"), " number of rows in data frame must be greater than 0!", call. = FALSE)
   }
 
   if (length(variables) != 0) {
@@ -203,7 +203,7 @@ function(x,
   n <- nrow(Dataset)
 
   if (n < 1) {
-    stop(sQuote("Dataset"), " number of rows in data frame must be greater than 1!", call. = FALSE)
+    stop(sQuote("Dataset"), " number of rows in data frame must be greater than 0!", call. = FALSE)
   }
 
   if (length(variables) != 0) {
